crates/ars-components/src/input/range_slider/snapshots/ars_components__input__range_slider__tests__range_slider_dragging_indicator_active.snap
---
source: crates/ars-components/src/input/range_slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).dragging_indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "dragging-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-slider",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "dragging",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
