crates/ars-components/src/input/range_slider/snapshots/ars_components__input__range_slider__tests__range_slider_output.snap
---
source: crates/ars-components/src/input/range_slider/mod.rs
expression: snapshot_attrs(&api.output_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "output",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-slider",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "off",
            ),
        ),
        (
            For,
            String(
                "price-thumb-start price-thumb-end",
            ),
        ),
    ],
    styles: [],
}
