crates/ars-components/src/input/range_slider/snapshots/ars_components__input__range_slider__tests__range_slider_range_rtl.snap
---
source: crates/ars-components/src/input/range_slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).range_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "range",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-slider",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "50%",
        ),
        (
            Left,
            "25%",
        ),
    ],
}
